Add calibration to wall analysis

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -127,6 +127,8 @@
     "# calculate psd for sweep without snr selection\n",
     "from wall_analysis import filter_by_dicts\n",
     "\n",
+    "n_freq = 1\n",
+    "\n",
     "dict_chosen = [{\n",
     "    'snr': 1,\n",
     "    'motors': 0,\n",
@@ -139,11 +141,13 @@
     "kwargs = {\n",
     "    'sweep': {\n",
     "        'min_t': 105,\n",
-    "        'max_t': 320\n",
+    "        'max_t': 320,\n",
+    "        'n_freq': n_freq\n",
     "    },\n",
     "    'sweep_buzzer': {\n",
     "        'min_t': 430,\n",
-    "        'max_t': 1230\n",
+    "        'max_t': 1230,\n",
+    "        'n_freq': n_freq\n",
     "    }\n",
     "}\n",
     "\n",
@@ -171,11 +175,13 @@
     "kwargs_harmonics = {\n",
     "    'sweep': {\n",
     "        'min_t': 40,\n",
-    "        'max_t': 95 \n",
+    "        'max_t': 95, \n",
+    "        'n_freq': n_freq\n",
     "    },\n",
     "    'sweep_buzzer': {\n",
     "        'min_t': 40,\n",
-    "        'max_t': 420 \n",
+    "        'max_t': 420,\n",
+    "        'n_freq': n_freq\n",
     "    }\n",
     "}\n",
     "\n",
@@ -189,6 +195,47 @@
     "    for j, row in df.iterrows():\n",
     "        psd_dict_harmonics = extract_psd_dict(row.signals_f, row.frequencies_matrix, ax=ax, **kwargs_harmonics[source])\n",
     "        df_total.loc[j, 'psd_dict_harmonics'] = psd_dict_harmonics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#chosen experiments for calibration, based on variance above.  \n",
+    "#chosen_experiments = ['_HALL', '_HALL2', '_HALL3']\n",
+    "chosen_experiments = ['_HALL', '_HALL2']\n",
+    "\n",
+    "df_calib = pd.DataFrame(index=[], columns=['frequencies', 'psd', 'psd_std', 'type', 'source', \n",
+    "                                           'method', 'n_freq'])\n",
+    "methods = ['median', 'median-reject'] # 'mean', 'mean-reject'\n",
+    "\n",
+    "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
+    "for source, df in df_chosen.groupby('source'):\n",
+    "    for type_ in ['psd_dict', 'psd_dict_harmonics']:\n",
+    "        \n",
+    "        psd_dict_list = []\n",
+    "        for appendix in chosen_experiments:\n",
+    "            psd_dict = list(df.loc[df.appendix==appendix, type_].values)\n",
+    "            psd_dict_list += psd_dict\n",
+    "        \n",
+    "        for method in methods:\n",
+    "            psd, frequencies, psd_std = extract_psd(psd_dict_list, method=method, verbose=False) \n",
+    "            df_calib.loc[len(df_calib), :] = {\n",
+    "                'frequencies': frequencies,\n",
+    "                'psd': psd, \n",
+    "                'psd_std': psd_std, \n",
+    "                'type': type_, \n",
+    "                'source': source,\n",
+    "                'method': method,\n",
+    "                'n_freq': n_freq\n",
+    "            }\n",
+    "    \n",
+    "fname = f'results/calibration_results.pkl'\n",
+    "pd.to_pickle(df_calib, fname)\n",
+    "print(f'saved as {fname}')\n",
+    "#df_chosen = df_total.loc[]"
    ]
   },
   {
@@ -240,45 +287,6 @@
     "            ax.plot(frequencies[mask], psd[i, mask], color=f'C{i}', label=f'mic{i}', marker='o')\n",
     "        ax.set_yscale('log')\n",
     "        ax.legend(loc='upper left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#chosen experiments for calibration, based on variance above.  \n",
-    "#chosen_experiments = ['_HALL', '_HALL2', '_HALL3']\n",
-    "chosen_experiments = ['_HALL', '_HALL2']\n",
-    "\n",
-    "df_calib = pd.DataFrame(index=[], columns=['frequencies', 'psd', 'psd_std', 'type', 'source', \n",
-    "                                           'method'])\n",
-    "methods = ['median', 'median-reject'] # 'mean', 'mean-reject'\n",
-    "\n",
-    "for source, df in df_chosen.groupby('source'):\n",
-    "    for type_ in ['psd_dict', 'psd_dict_harmonics']:\n",
-    "        \n",
-    "        psd_dict_list = []\n",
-    "        for appendix in chosen_experiments:\n",
-    "            psd_dict = list(df.loc[df.appendix==appendix, type_].values)\n",
-    "            psd_dict_list += psd_dict\n",
-    "    \n",
-    "        for method in methods:\n",
-    "            psd, frequencies, psd_std = extract_psd(psd_dict_list, method=method, verbose=False) \n",
-    "            df_calib.loc[len(df_calib), :] = {\n",
-    "                'frequencies': frequencies,\n",
-    "                'psd': psd, \n",
-    "                'psd_std': psd_std, \n",
-    "                'type': type_, \n",
-    "                'source': source,\n",
-    "                'method': method\n",
-    "            }\n",
-    "    \n",
-    "fname = f'results/calibration_results.pkl'\n",
-    "pd.to_pickle(df_calib, fname)\n",
-    "print(f'saved as {fname}')\n",
-    "#df_chosen = df_total.loc[]"
    ]
   },
   {
