--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -169,7 +169,7 @@
     "    axs[0, 1].plot([row.seconds[cut_x], row.seconds[cut_x]], [row.frequencies[cut_y[0]], row.frequencies[cut_y[-1]]], color='red', linewidth=1)\n",
     "    axs[0, 1].plot([row.seconds[0], row.seconds[cut_x]], [row.frequencies[cut_y[-1]], row.frequencies[cut_y[-1]]], color='red', linewidth=1)\n",
     "    axs[0, 2].pcolorfast(row.seconds[:cut_x], row.frequencies[cut_y], np.log(row.spec.T[cut_y, :cut_x]))\n",
-    "    fig.savefig(f'/home/duembgen/Desktop/spec-{chosen_source}.png', bbox_inches='tight')"
+    "    #fig.savefig(f'/home/duembgen/Desktop/spec-{chosen_source}.png', bbox_inches='tight')"
    ]
   },
   {
@@ -316,6 +316,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.interpolate import interp1d\n",
+    "n_freq = 1 \n",
+    "calib_df = pd.read_pickle('results/calibration_results.pkl')\n",
+    "chosen_dict = {\n",
+    "   'source': 'sweep',\n",
+    "   #'method': 'median-reject',\n",
+    "   'method': 'median',\n",
+    "   'type': 'psd_dict',\n",
+    "   'n_freq': n_freq\n",
+    "}\n",
+    "calib_df = filter_by_dicts(calib_df, [chosen_dict])\n",
+    "assert len(calib_df) == 1\n",
+    "row = calib_df.iloc[0]\n",
+    "\n",
+    "fig, axs = plt.subplots(1, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
+    "fig.set_size_inches(15, 5)\n",
+    "#fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
+    "for i in range(row.psd.shape[0]):\n",
+    "    axs[0, i].semilogy(row.frequencies, row.psd[i], color=f'C{i}')\n",
+    "axs[0, i].set_ylim(1e-3, 20)\n",
+    "\n",
+    "calib_psd = row.psd\n",
+    "calib_f = row.frequencies\n",
+    "\n",
+    "uniform_f = np.linspace(1000, 6000, 50)\n",
+    "calib = interp1d(x=calib_f, y=calib_psd, kind='linear', fill_value='extrapolate')\n",
+    "uniform_psd = calib(uniform_f)\n",
+    "for i in range(row.psd.shape[0]):\n",
+    "    axs[0, i].scatter(uniform_f, uniform_psd[i], color=f'C{i}')\n",
+    "    axs[0, i].grid('both')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -323,54 +361,110 @@
    "source": [
     "from constants import SPEED_OF_SOUND\n",
     "from wall_analysis import extract_psd_dict, extract_psd\n",
-    "from simulation import get_freq_slice_pyroom, get_freq_slice_theory\n",
+    "from simulation import get_freq_slice_pyroom, get_freq_slice_theory, get_setup\n",
     "    \n",
     "sys.path.append(f'../experiments/{exp_name}/')\n",
     "from params import MIN_FREQ, MAX_FREQ\n",
     "    \n",
     "CHOSEN_MICS = [0, 1, 2, 3] #[3]\n",
+    "MIN_F = 1000\n",
+    "MAX_F = 4000\n",
     "\n",
     "df_audio_deck = df_chosen[df_chosen.mic_type=='audio_deck']\n",
     "\n",
+    "distances = df_chosen.distance.unique()\n",
+    "features = {\n",
+    "    'variance': np.zeros((len(CHOSEN_MICS), len(distances))),\n",
+    "    'range': np.zeros((len(CHOSEN_MICS), len(distances)))\n",
+    "}\n",
+    "signal = pd.read_pickle('results/multi.pk')\n",
+    "\n",
+    "d_idx = 0\n",
     "for (distance, motors), df_this in df_audio_deck.groupby(['distance', 'motors']):\n",
-    "    \n",
     "    if motors != 0:\n",
     "        continue\n",
     "        \n",
-    "    fig, axs = plt.subplots(2, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
-    "    fig.set_size_inches(15, 5)\n",
-    "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
-    "\n",
     "    if len(df_this) != 1: \n",
     "        print(f\"{len(df_this)} findings for {distance}, {mic_type}, {motors}\")\n",
     "        continue\n",
     "\n",
     "    row = df_this.iloc[0]\n",
     "    \n",
-    "    psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, min_t=60, max_t=190, n_freq=4)\n",
-    "    psd, frequencies, psd_std = extract_psd([psd_dict])\n",
+    "    psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, \n",
+    "                                min_t=60, max_t=190, n_freq=n_freq)\n",
     "    \n",
-    "    signal = pd.read_pickle('results/multi.pk')\n",
+    "    psd, frequencies, psd_std = extract_psd([psd_dict])\n",
+    "    psd_calib = calib(frequencies)\n",
+    "    psd_mean = np.mean(psd_calib, axis=0)\n",
+    "    \n",
+    "    mask = (frequencies < MAX_F) & (frequencies > MIN_F)\n",
+    "    psd = psd[:, mask]\n",
+    "    psd_calib = psd_calib[:, mask]\n",
+    "    psd_mean = psd_mean[mask]\n",
+    "    frequencies = frequencies[mask]\n",
+    "    \n",
+    "    source, mic_positions = get_setup(distance_cm = distance)\n",
+    "    source_image = [source[0], -source[1]]\n",
+    "    \n",
+    "    fig, axs = plt.subplots(3, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
+    "    axs[0, 0].set_yscale('log')\n",
+    "    axs[0, 0].set_ylim(1e-1, 20)\n",
+    "    axs[0, 0].set_xlim(MIN_F, MAX_F)\n",
+    "    fig.set_size_inches(15, 10)\n",
+    "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
+    "    \n",
+    "    for mic_idx in CHOSEN_MICS:\n",
+    "        axs[0, mic_idx].set_title(f'm{mic_idx}')\n",
+    "        axs[0, mic_idx].plot(frequencies, psd[mic_idx], label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
+    "        axs[0, mic_idx].scatter(frequencies, psd_calib[mic_idx], color=f'C{mic_idx}')\n",
+    "        axs[0, mic_idx].plot(frequencies, psd_mean, color='k')\n",
+    "        \n",
+    "        psd_ratio = psd[mic_idx]/psd_calib[mic_idx]\n",
+    "        axs[1, mic_idx].plot(frequencies, psd_ratio, label=f'per-mic-calib', color=f'C{mic_idx}')\n",
+    "        axs[1, mic_idx].plot(frequencies, psd[mic_idx]/psd_mean, label=f'global calib', color='k')\n",
+    "        \n",
+    "        features['variance'][mic_idx, d_idx] = np.var(psd_ratio)\n",
+    "        features['range'][mic_idx, d_idx] = np.max(psd_ratio) - np.min(psd_ratio)\n",
+    "\n",
     "    slices_theory = get_freq_slice_theory(frequencies, distance_cm=distance)\n",
     "    slices_pyroom = get_freq_slice_pyroom(frequencies, distance_cm=distance, signal=signal)\n",
     "    for mic_idx in CHOSEN_MICS:\n",
-    "        axs[0, mic_idx].plot(frequencies, psd[mic_idx], label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
-    "        axs[0, mic_idx].set_title(f'm{mic_idx}')\n",
-    "\n",
-    "        axs[1, mic_idx].plot(frequencies, np.abs(slices_theory[mic_idx]), label='theory')\n",
-    "        axs[1, mic_idx].plot(frequencies, np.abs(slices_pyroom[mic_idx]), label='pyroom')\n",
-    "        axs[1, mic_idx].legend(loc='lower left')\n",
-    "        #spec_fft = np.fft.rfft(spec)[1:]\n",
-    "        #freqs = np.fft.rfftfreq(len(spec), mean_f)[1:] # \"seconds\"\n",
-    "        #axs[1, mic_idx].plot(1/freqs, np.abs(spec_fft), color=f'C{mic_idx}')\n",
-    "        #axs[1, mic_idx].axvline(expected_period, color=f'C{mic_idx}', ls=\":\") # cm\n",
-    "    axs[0, mic_idx].set_yscale('log')\n",
-    "    \n",
-    "    expected_period = SPEED_OF_SOUND / (2 * distance * 1e-2) # m/s / m = Hz\n",
-    "    #axs[0, mic_idx].legend(loc='upper right')\n",
-    "    #axs[0, mic_idx].set_xlim(0,50)\n",
-    "    #axs[1, mic_idx].set_xlim(1e-1,50)\n",
-    "    #axs[0, j].set_ylim(min(spec), max(spec))"
+    "        \n",
+    "        axs[2, mic_idx].plot(frequencies, np.abs(slices_theory[mic_idx]), label='theory')\n",
+    "        axs[2, mic_idx].plot(frequencies, np.abs(slices_pyroom[mic_idx]), label='pyroom')\n",
+    "        axs[2, mic_idx].legend(loc='lower left')\n",
+    "        \n",
+    "        \n",
+    "    fig, axs = plt.subplots(1, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
+    "    #axs[0, 0].set_yscale('log')\n",
+    "    #axs[0, 0].set_ylim(1e-1, 20)\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
+    "    for mic_idx in CHOSEN_MICS:\n",
+    "        mic = mic_positions[mic_idx]\n",
+    "        delta = np.linalg.norm(mic - source_image) - np.linalg.norm(mic - source)\n",
+    "        expected_period = SPEED_OF_SOUND / delta # m/s / m = Hz\n",
+    "        psd_ratio = psd[mic_idx]/psd_calib[mic_idx]\n",
+    "        psd_fft = np.fft.rfft(psd_ratio)[1:]\n",
+    "        mean_f = np.mean(frequencies[1:]-frequencies[:-1])\n",
+    "        freqs = np.fft.rfftfreq(len(psd_ratio), mean_f)[1:] # \"seconds\"\n",
+    "        axs[0, mic_idx].semilogx(1/freqs, np.abs(psd_fft), color=f'C{mic_idx}')\n",
+    "        axs[0, mic_idx].axvline(expected_period, color=f'C{mic_idx}', ls=\":\") # cm\n",
+    "        \n",
+    "    d_idx += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1, len(features), squeeze=False)\n",
+    "for j, (key, vals) in enumerate(features.items()):\n",
+    "    for i in range(vals.shape[0]):\n",
+    "        axs[0, j].plot(distances, vals[i], label=f'mic{i}', color=f'C{i}', marker='x')\n",
+    "    axs[0, j].set_title(key)"
    ]
   },
   {
