Propellers filtering study

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -425,6 +425,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "# motors calibration\n",
+    "f_45000 = 671\n",
+    "f_55000 = 750\n",
+    "a = (f_55000 - f_45000) / (55000 - 45000)\n",
+    "t = 50000\n",
+    "f = a * (t - 45000) + f_45000\n",
+    "for DELTA in [50, 100, 200]:\n",
+    "    MIN_FREQ = 1000\n",
+    "    MAX_FREQ = 8000\n",
+    "\n",
+    "    thrusts = np.linspace(45000, 55000, 10)\n",
+    "    freqs = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "    freqs = freqs[(freqs < MAX_FREQ) & (freqs > MIN_FREQ)]\n",
+    "    freqs_matrix = np.ones((len(thrusts), len(freqs)))\n",
+    "\n",
+    "    for i, t in enumerate(thrusts):\n",
+    "        f = a * (t - 45000) + f_45000\n",
+    "        for k in range(30):\n",
+    "            freqs_matrix[i, (freqs < (k*f + DELTA)) & (freqs > (k*f - DELTA))] = 0\n",
+    "\n",
+    "    mask = np.all(freqs_matrix > 0, axis=0)\n",
+    "    freqs_matrix[freqs_matrix.shape[0]//2, :] = mask \n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolorfast(freqs, thrusts, freqs_matrix)\n",
+    "    ax.set_title(f'delta={DELTA}Hz')\n",
+    "\n",
+    "    print('available', freqs[mask])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from evaluate_data import read_df_from_wav, get_fname, read_df, get_spectrogram\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
