--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -246,7 +246,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -409,7 +409,6 @@
     "    fig, axs = plt.subplots(3, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
     "    axs[0, 0].set_yscale('log')\n",
     "    axs[0, 0].set_ylim(1e-1, 20)\n",
-    "    axs[0, 0].set_xlim(MIN_F, MAX_F)\n",
     "    fig.set_size_inches(15, 10)\n",
     "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
     "    \n",
