--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -290,11 +290,12 @@
    "source": [
     "from constants import SPEED_OF_SOUND\n",
     "\n",
-    "frequencies_slices = [671, 3125, 4156, 8000]\n",
+    "#frequencies_slices = [671, 3125, 4156, 8000]\n",
+    "frequencies_slices = [1750, 2375, 3125, 3875]\n",
     "\n",
     "max_distance = 50\n",
     "fig, axs = plt.subplots(len(frequencies_slices), sharey=True, sharex=True)\n",
-    "fig.suptitle('distance slices')\n",
+    "fig.suptitle('frequency slices')\n",
     "fig.set_size_inches(10, 5)\n",
     "for i, f in enumerate(frequencies_slices):\n",
     "    idx = np.argmin(np.abs(frequencies-f))\n",
@@ -308,7 +309,8 @@
     "    # peak from constr. interference is expected when the wavelength equals k * distance/2\n",
     "    # wavelength_constr = c / f_constr = distance / 2\n",
     "    d_constr = SPEED_OF_SOUND / (2 * f) * 100\n",
-    "    [axs[i].axvline(x=d, color='C1') for d in np.arange(2)*d_constr]\n",
+    "    num_peaks = (distances[-1]-distances[0])//d_constr + 1\n",
+    "    [axs[i].axvline(x=d, color='C1') for d in np.arange(num_peaks)*d_constr]\n",
     "    \n",
     "    fft = np.fft.rfft(slice_)[1:]\n",
     "    df = distances[1] - distances[0]\n",
