Spectrogram analysis of flying experiments

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -135,7 +135,8 @@
    "source": [
     "from wall_analysis import filter_by_dicts\n",
     "filter_dict = {\n",
-    "    'source': 'mono3875',\n",
+    "    #'source': 'mono3875',\n",
+    "    'source': 'sweep_slow',\n",
     "    'appendix': '_new'\n",
     "}\n",
     "rows =filter_by_dicts(df_total, [filter_dict])\n",
@@ -148,7 +149,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "all_frequencies = np.round(np.fft.rfftfreq(N_BUFFER, 1/FS), 0)\n",
+    "\n",
+    "spectrogram = np.zeros((len(all_frequencies), row.signals_f.shape[0], row.signals_f.shape[1]), dtype=float) # 1025 x n_times x n_mics\n",
+    "for t_idx in range(row.signals_f.shape[0]):\n",
+    "    freqs = row.frequencies_matrix[t_idx, :]\n",
+    "    for i, f in enumerate(freqs):\n",
+    "        f_idx =  np.argmin(np.abs(f - all_frequencies))\n",
+    "        if abs(all_frequencies[f_idx] - f) > 10: \n",
+    "            print(f'Warning: frequency {f} is far from {all_frequencies}')\n",
+    "        spectrogram[f_idx, t_idx, :] = np.abs(row.signals_f[t_idx, :, i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(f'../experiments/{exp_name}/')\n",
+    "from params import FREQS\n",
+    "min_freq = 1000\n",
+    "max_freq = 5000\n",
+    "plot_freq = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
+    "plot_times = ~np.isnan(row.d_estimate)\n",
+    "\n",
+    "n_mics = row.signals_f.shape[1]\n",
+    "#for mic_idx in range(n_mics):\n",
+    "for mic_idx in range(1):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    spec = np.log10(spectrogram[plot_freq, :, mic_idx])[:-1, :]\n",
+    "    spec = spec[:, plot_times][:, :-1]\n",
+    "    ax.pcolorfast(row.seconds[plot_times], all_frequencies[plot_freq], spec)\n",
+    "    [ax.axhline(f, label=f'{f}', color=f'C{i}', ls=':') for i, f in enumerate(FREQS)]\n",
+    "    ax.set_title(row.source + row.appendix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strongest_bin = row.frequencies_matrix[plot_times, 0]\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "plt.scatter(row.seconds[plot_times], strongest_bin)\n",
+    "[plt.axhline(f, label=f'{f}', color=f'C{i}') for i, f in enumerate(FREQS)]\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freqs = FREQS\n",
+    "\n",
+    "# TODO(continue here): scatter plot of frequency vs. distance for chosen distances, one for each"
+   ]
   }
  ],
  "metadata": {
