--- a/notebooks/SignalAnalysis.ipynb
+++ b/notebooks/SignalAnalysis.ipynb
@@ -61,14 +61,15 @@
     "    'strongest_freqs'\n",
     "])\n",
     "\n",
+    "DISTANCE_LIST = [0]\n",
     "DEGREE_LIST = [90]\n",
     "PROPS_LIST = [False, True]\n",
     "SNR_LIST = [False, True]\n",
     "MOTORS_LIST = [False, True]\n",
     "SOURCE_LIST = ['sweep']\n",
     "\n",
-    "for params_values in itertools.product(DEGREE_LIST, PROPS_LIST, SNR_LIST, MOTORS_LIST, SOURCE_LIST):\n",
-    "    params_dict = dict(zip(['degree', 'props', 'snr', 'motors', 'source'], params_values))\n",
+    "for params_values in itertools.product(DEGREE_LIST, PROPS_LIST, SNR_LIST, MOTORS_LIST, SOURCE_LIST, DISTANCE_LIST):\n",
+    "    params_dict = dict(zip(['degree', 'props', 'snr', 'motors', 'source', 'distance'], params_values))\n",
     "    params_dict['exp_name'] = exp_name\n",
     "\n",
     "    df, df_pos = read_df(**params_dict)\n",
@@ -366,6 +367,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
